--- a/variables.ipynb
+++ b/variables.ipynb
@@ -219,36 +219,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Toda la veterinaria: {'perros': [{'nombre': 'Lazy', 'tipo': 'perro', 'edad': 3, 'peso': 20}, {'nombre': 'Lazy2', 'tipo': 'perro', 'edad': 3, 'peso': 20}], 'focas': [{'nombre': 'Flipper', 'tipo': 'foca', 'edad': 10, 'peso': 120}, {'nombre': 'Flipper2', 'tipo': 'foca', 'edad': 10, 'peso': 120}]}\n",
-      "2º foca: {'nombre': 'Flipper2', 'tipo': 'foca', 'edad': 10, 'peso': 120}\n"
-     ]
-    }
-   ],
-   "source": [
-    "lazy = {\"nombre\": \"Lazy\", \"tipo\": \"perro\", \"edad\": 3, \"peso\": 20}\n",
-    "lazy2 = {\"nombre\": \"Lazy2\", \"tipo\": \"perro\", \"edad\": 3, \"peso\": 20}\n",
-    "flipper = {\"nombre\": \"Flipper\", \"tipo\": \"foca\", \"edad\": 10, \"peso\": 120}\n",
-    "flipper2 = {\"nombre\": \"Flipper2\", \"tipo\": \"foca\", \"edad\": 10, \"peso\": 120}\n",
-    "\n",
-    "perros = [ lazy, lazy2 ]\n",
-    "focas = [ flipper, flipper2 ]\n",
-    "\n",
-    "veterinaria = {\"perros\": perros, \"focas\": focas}\n",
-    "\n",
-    "print(\"Toda la veterinaria:\", veterinaria)\n",
-    "\n",
-    "print(\"2º foca:\",veterinaria['focas'][1])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
    "outputs": [
@@ -881,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -899,10 +869,159 @@
     "\n",
     "try:\n",
     "    l1 > l2\n",
+    "    print('Correcto')\n",
     "except:\n",
     "    print('Error!!!')\n",
     "\n",
     "print('Continua...')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['z', 'c', 'b', 'a', 'a']"
+      ]
+     },
+     "execution_count": 208,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l1  = ['a','b','c','a','z']\n",
+    "max(l1)\n",
+    "l1.index('a',1)\n",
+    "l1.sort(reverse=True)\n",
+    "l1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t1 = 1,2,3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0, 1, 2, 'a'}"
+      ]
+     },
+     "execution_count": 219,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1 = {'a',0,1, 2 ,True, False, 'a'}\n",
+    "s1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0, 1, 2, 3, 5, 'a'}"
+      ]
+     },
+     "execution_count": 225,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(l1)\n",
+    "\n",
+    "s1.update({2,3,5})\n",
+    "s1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0, 1, 3, 5, 'a'}"
+      ]
+     },
+     "execution_count": 229,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1.discard(22)\n",
+    "s1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 'a', 'b', 'c'}"
+      ]
+     },
+     "execution_count": 235,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1={'a','b',5}\n",
+    "s2={1,2,5,'c'}\n",
+    "s3 = s1.intersection(s2)\n",
+    "s3\n",
+    "s1.symmetric_difference(s2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('lunes', 1), ('martes', 2), ('miercoels', 3)]"
+      ]
+     },
+     "execution_count": 248,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict1 = {'lunes':1,'martes':2, 'miercoels':3}\n",
+    "l1 = list(dict1.keys())\n",
+    "l1\n",
+    "vals = tuple(dict1.values())\n",
+    "vals\n",
+    "items = list(dict1.items())\n",
+    "items"
    ]
   }
  ],
