--- a/ejercciios4_local.ipynb
+++ b/ejercciios4_local.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ejercicios 4"
+    "## Ejercicios 4 - local"
    ]
   },
   {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,16 +164,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2. notas_mean_x_asig: {'maths': [3.5, 7.0, 3.5, 3.5, 3.0, 4.0, 6.0, 9.0, 7.5, 6.5, 3.0, 5.5, 4.0, 6.5, 5.0, 6.5, 2.5, 1.5, 6.0, 8.0, 6.0, 9.5, 4.5, 7.0, 5.0, 3.0, 6.0, 7.5, 6.5, 2.5, 3.0, 5.0, 5.5, 4.5, 2.0, 5.5, 6.0, 3.5, 5.5, 3.5, 7.0, 3.5, 3.5, 1.5, 1.0, 3.0, 6.0, 7.5, 7.5, 2.0, 7.5, 6.5, 5.0, 2.5, 9.0, 4.0, 9.5, 5.5, 7.5, 3.5, 4.0, 6.5, 1.5, 7.0, 7.5, 8.5, 3.0, 5.5, 4.0, 6.5, 9.5, 4.5, 7.0, 3.5, 3.0, 7.0, 3.5, 7.0, 8.0, 7.5, 5.5, 6.5, 9.5, 7.0, 6.0, 5.0, 2.5, 8.0, 2.5, 3.5, 8.5, 6.0, 5.0, 4.0, 5.0, 7.5, 7.0, 6.0, 3.0], 'lang': [5.0, 7.5, 6.0, 5.0, 8.5, 5.0, 4.5, 4.5, 4.0, 5.5, 4.0, 3.0, 4.5, 1.5, 3.5, 6.5, 9.5, 4.5, 6.5, 2.5, 6.5, 4.5, 4.5, 5.0, 4.0, 4.0, 9.0, 5.0, 5.5, 5.0, 4.5, 7.0, 6.5, 8.0, 5.0, 5.5, 7.0, 3.5, 2.0, 4.5, 3.5, 2.0, 10.0, 6.5, 2.5, 9.5, 2.0, 6.5, 4.0, 6.0, 7.0, 1.5, 8.0, 5.0, 4.0, 7.5, 5.0, 5.0, 6.5, 7.0, 7.5, 4.0, 2.5, 6.5, 5.0, 9.0, 3.5, 4.0, 5.5, 6.0, 8.0, 6.0, 3.0, 7.0, 6.5, 5.5, 7.0, 10.0, 4.0, 6.0, 5.0, 7.5, 7.0, 7.5, 4.5, 3.5, 6.5, 9.0, 7.0, 1.5, 2.0, 9.0, 4.5, 4.0, 4.5, 9.0, 6.0, 9.0, 3.5]}\n",
-      "2. notas_mean_x_asig: {'maths': 5.34, 'lang': 5.49}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'Sosanna': [{'maths': (4, 3)}, {'lang': (5, 5)}],\n",
+       " 'Rosalind': [{'maths': (8, 6)}, {'lang': (10, 5)}],\n",
+       " 'Gaspar': [{'maths': (1, 6)}, {'lang': (7, 5)}],\n",
+       " 'Herve': [{'maths': (2, 5)}, {'lang': (8, 2)}],\n",
+       " 'Jayme': [{'maths': (5, 1)}, {'lang': (10, 7)}],\n",
+       " 'Dasya': [{'maths': (5, 3)}, {'lang': (8, 2)}],\n",
+       " 'Christean': [{'maths': (2, 10)}, {'lang': (3, 6)}],\n",
+       " 'Risa': [{'maths': (9, 9)}, {'lang': (2, 7)}],\n",
+       " 'Florenza': [{'maths': (10, 5)}, {'lang': (4, 4)}],\n",
+       " 'Donella': [{'maths': (10, 3)}, {'lang': (8, 3)}],\n",
+       " 'Cesaro': [{'maths': (2, 4)}, {'lang': (1, 7)}],\n",
+       " 'Beatrisa': [{'maths': (9, 2)}, {'lang': (1, 5)}],\n",
+       " 'Thain': [{'maths': (1, 7)}, {'lang': (6, 3)}],\n",
+       " 'Shaylah': [{'maths': (6, 7)}, {'lang': (2, 1)}],\n",
+       " 'Anne-marie': [{'maths': (4, 6)}, {'lang': (4, 3)}],\n",
+       " 'Swen': [{'maths': (8, 5)}, {'lang': (7, 6)}],\n",
+       " 'Vaclav': [{'maths': (1, 4)}, {'lang': (9, 10)}],\n",
+       " 'Hermine': [{'maths': (2, 1)}, {'lang': (8, 1)}],\n",
+       " 'Sybyl': [{'maths': (10, 2)}, {'lang': (3, 10)}],\n",
+       " 'Ynes': [{'maths': (6, 10)}, {'lang': (3, 2)}],\n",
+       " 'Antonie': [{'maths': (9, 3)}, {'lang': (4, 9)}],\n",
+       " 'Trixie': [{'maths': (9, 10)}, {'lang': (5, 4)}],\n",
+       " 'Mathilde': [{'maths': (4, 5)}, {'lang': (8, 1)}],\n",
+       " 'Merlina': [{'maths': (6, 8)}, {'lang': (4, 6)}],\n",
+       " 'Zared': [{'maths': (1, 9)}, {'lang': (5, 3)}],\n",
+       " 'Brandais': [{'maths': (3, 3)}, {'lang': (7, 1)}],\n",
+       " 'Reggie': [{'maths': (10, 2)}, {'lang': (10, 8)}],\n",
+       " 'Burk': [{'maths': (8, 7)}, {'lang': (5, 5)}],\n",
+       " 'Seymour': [{'maths': (5, 8)}, {'lang': (8, 3)}],\n",
+       " 'Fergus': [{'maths': (2, 3)}, {'lang': (5, 5)}],\n",
+       " 'Jeanette': [{'maths': (1, 5)}, {'lang': (5, 4)}],\n",
+       " 'Arther': [{'maths': (5, 5)}, {'lang': (9, 5)}],\n",
+       " 'Avictor': [{'maths': (9, 2)}, {'lang': (8, 5)}],\n",
+       " 'Lynette': [{'maths': (7, 2)}, {'lang': (10, 6)}],\n",
+       " 'Briano': [{'maths': (2, 2)}, {'lang': (4, 6)}],\n",
+       " 'Daveta': [{'maths': (4, 7)}, {'lang': (2, 9)}],\n",
+       " 'Devonne': [{'maths': (10, 2)}, {'lang': (6, 8)}],\n",
+       " 'Chiarra': [{'maths': (6, 1)}, {'lang': (4, 3)}],\n",
+       " 'Torrey': [{'maths': (2, 9)}, {'lang': (1, 3)}],\n",
+       " 'Hattie': [{'maths': (2, 5)}, {'lang': (7, 2)}],\n",
+       " 'Veronica': [{'maths': (8, 6)}, {'lang': (3, 4)}],\n",
+       " 'Jared': [{'maths': (6, 1)}, {'lang': (1, 3)}],\n",
+       " 'Lori': [{'maths': (6, 1)}, {'lang': (10, 10)}],\n",
+       " 'Kristopher': [{'maths': (1, 2)}, {'lang': (4, 9)}],\n",
+       " 'Jeanne': [{'maths': (1, 1)}, {'lang': (1, 4)}],\n",
+       " 'Maximilian': [{'maths': (3, 3)}, {'lang': (10, 9)}],\n",
+       " 'Merrily': [{'maths': (5, 7)}, {'lang': (1, 3)}],\n",
+       " 'Skipton': [{'maths': (9, 6)}, {'lang': (4, 9)}],\n",
+       " 'Tom': [{'maths': (10, 5)}, {'lang': (1, 7)}],\n",
+       " 'Cirilo': [{'maths': (2, 2)}, {'lang': (6, 6)}],\n",
+       " 'Warde': [{'maths': (8, 7)}, {'lang': (9, 5)}],\n",
+       " 'Woodie': [{'maths': (10, 3)}, {'lang': (2, 1)}],\n",
+       " 'Odetta': [{'maths': (3, 7)}, {'lang': (7, 9)}],\n",
+       " 'Cordelie': [{'maths': (2, 3)}, {'lang': (9, 1)}],\n",
+       " 'Wilow': [{'maths': (10, 8)}, {'lang': (2, 6)}],\n",
+       " 'Charissa': [{'maths': (5, 3)}, {'lang': (5, 10)}],\n",
+       " 'Ralina': [{'maths': (10, 9)}, {'lang': (8, 2)}],\n",
+       " 'Charisse': [{'maths': (6, 5)}, {'lang': (1, 9)}],\n",
+       " 'Huntley': [{'maths': (8, 7)}, {'lang': (10, 3)}],\n",
+       " 'Ella': [{'maths': (4, 3)}, {'lang': (6, 8)}],\n",
+       " 'Nelli': [{'maths': (2, 6)}, {'lang': (5, 10)}],\n",
+       " 'Gearalt': [{'maths': (4, 9)}, {'lang': (4, 4)}],\n",
+       " 'Zahara': [{'maths': (2, 1)}, {'lang': (1, 4)}],\n",
+       " 'Dilan': [{'maths': (8, 6)}, {'lang': (7, 6)}],\n",
+       " 'Frederique': [{'maths': (5, 10)}, {'lang': (2, 8)}],\n",
+       " 'Saba': [{'maths': (9, 8)}, {'lang': (9, 9)}],\n",
+       " 'Natalya': [{'maths': (1, 5)}, {'lang': (5, 2)}],\n",
+       " 'Myrah': [{'maths': (3, 8)}, {'lang': (3, 5)}],\n",
+       " 'Magnum': [{'maths': (7, 1)}, {'lang': (2, 9)}],\n",
+       " 'Grace': [{'maths': (9, 4)}, {'lang': (6, 6)}],\n",
+       " 'Ilysa': [{'maths': (10, 9)}, {'lang': (8, 8)}],\n",
+       " 'Clerkclaude': [{'maths': (7, 2)}, {'lang': (10, 2)}],\n",
+       " 'Yetty': [{'maths': (8, 6)}, {'lang': (2, 4)}],\n",
+       " 'Cassandre': [{'maths': (6, 1)}, {'lang': (9, 5)}],\n",
+       " 'Olympie': [{'maths': (3, 3)}, {'lang': (10, 3)}],\n",
+       " 'Joshuah': [{'maths': (7, 7)}, {'lang': (9, 2)}],\n",
+       " 'Kristine': [{'maths': (3, 4)}, {'lang': (7, 7)}],\n",
+       " 'Dean': [{'maths': (8, 6)}, {'lang': (10, 10)}],\n",
+       " 'Ilyssa': [{'maths': (9, 7)}, {'lang': (5, 3)}],\n",
+       " 'Nannie': [{'maths': (6, 9)}, {'lang': (2, 10)}],\n",
+       " 'Feodor': [{'maths': (5, 6)}, {'lang': (3, 7)}],\n",
+       " 'Guglielma': [{'maths': (10, 3)}, {'lang': (9, 6)}],\n",
+       " 'Alla': [{'maths': (9, 10)}, {'lang': (7, 7)}],\n",
+       " 'Rowland': [{'maths': (4, 10)}, {'lang': (8, 7)}],\n",
+       " 'Miquela': [{'maths': (7, 5)}, {'lang': (2, 7)}],\n",
+       " 'Sapphira': [{'maths': (4, 6)}, {'lang': (5, 2)}],\n",
+       " 'Zorina': [{'maths': (3, 2)}, {'lang': (4, 9)}],\n",
+       " 'Rosemonde': [{'maths': (10, 6)}, {'lang': (9, 9)}],\n",
+       " 'Alisa': [{'maths': (1, 4)}, {'lang': (9, 5)}],\n",
+       " 'Ginger': [{'maths': (3, 4)}, {'lang': (1, 2)}],\n",
+       " 'Karlis': [{'maths': (9, 8)}, {'lang': (3, 1)}],\n",
+       " 'Robbin': [{'maths': (7, 5)}, {'lang': (10, 8)}],\n",
+       " 'Kimberly': [{'maths': (3, 7)}, {'lang': (8, 1)}],\n",
+       " 'Udale': [{'maths': (7, 1)}, {'lang': (1, 7)}],\n",
+       " 'Isidor': [{'maths': (8, 2)}, {'lang': (6, 3)}],\n",
+       " 'Farlee': [{'maths': (5, 10)}, {'lang': (9, 9)}],\n",
+       " 'Katleen': [{'maths': (8, 6)}, {'lang': (9, 3)}],\n",
+       " 'Nanine': [{'maths': (5, 7)}, {'lang': (9, 9)}],\n",
+       " 'Marlow': [{'maths': (2, 4)}, {'lang': (5, 2)}]}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lnotas = list(notas.items())\n",
+    "lnotas[:3]\n",
+    "\n",
+    "dict(lnotas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\" newNotas = {}\\nfor alumno, data in notas.items():\\n    # print(alumno, data)\\n    newData = []\\n\\n    for asig in data:\\n        asigKey = list(asig.keys())[0]\\n        asigVals = list(asig[asigKey])\\n        mean = sum(asigVals)/len(asigVals)\\n\\n        if len(asigVals) <= 2:\\n            asigVals.append(mean)\\n        else:\\n            asigVals[2] = mean\\n\\n        asig[asigKey] = asigVals\\n        # print(asig)\\n        newData.append(asig)\\n\\n    # print(newData)\\n    newNotas[alumno] = newData\\n\\nprint('1. newNotas:', newNotas) \""
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -200,8 +323,15 @@
     "    # print(newData)\n",
     "    newNotas[alumno] = newData\n",
     "\n",
-    "print('1. newNotas:', newNotas) \"\"\"\n",
-    "\n",
+    "print('1. newNotas:', newNotas) \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 2- Obtener la media global por asignatura.ç\n",
     "notas_mean_x_asig = {}\n",
     "\n",
