--- a/ejercicios5_local.ipynb
+++ b/ejercicios5_local.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -170,16 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# - Refactoriza el ejercicio de notas de alumnos para que se base en funciones."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -188,13 +179,13 @@
        "[1, 8, 27, 64, 125, 216, 343, 512]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# - Escribe una expresión lambda que eleve al cubo todos los números de la lista siguiente: [1,2,3,4,5,6,7,8]\n",
+    "# - Escribe una expresión lambda que eleve al cubo todos los números de la lista siguiente: [1,2,3,4,5,6,7,8], usando la función map\n",
     "\n",
     "lista = [1,2,3,4,5,6,7,8]\n",
     "\n",
@@ -203,6 +194,15 @@
     "result = map(miLambda, lista)\n",
     "\n",
     "list(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# - Refactoriza el ejercicio de notas de alumnos para que se base en funciones.\n"
    ]
   }
  ],
