--- a/3.control.ipynb
+++ b/3.control.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estoy en el if\n",
+      "Sí es >= 2\n",
+      "No es 4!!\n"
+     ]
+    }
+   ],
    "source": [
     "n = 3\n",
     "\n",
@@ -168,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
