--- a/ejercicios5_local.ipynb
+++ b/ejercicios5_local.ipynb
@@ -9,23 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['a', 'l', 'o', 'H']\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "False"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +54,7 @@
        "16"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +91,7 @@
        " {'nombre': 'metEoro', 'direccion': 'Calle A', 'edad': 16}]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,23 +122,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('aNa', 'Calle X'),\n",
-       " ('aNa', 22),\n",
-       " ('luIs', 'Calle Y'),\n",
-       " ('luIs', 24),\n",
-       " ('juAna', 'Calle Z'),\n",
-       " ('juAna', 43),\n",
-       " ('metEoro', 'Calle A'),\n",
-       " ('metEoro', 16)]"
+       "([('aNa', 'Calle X'),\n",
+       "  ('luIs', 'Calle Y'),\n",
+       "  ('juAna', 'Calle Z'),\n",
+       "  ('metEoro', 'Calle A')],\n",
+       " [('aNa', 22), ('luIs', 24), ('juAna', 43), ('metEoro', 16)])"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,13 +146,14 @@
     "\n",
     "def transformaEnTuplas(students):\n",
     "\n",
-    "    nueva_lista = []\n",
+    "    nueva_lista1 = []\n",
+    "    nueva_lista2 = []\n",
     "\n",
     "    for un_alumno in students:\n",
-    "        nueva_lista.append((un_alumno['nombre'], un_alumno['direccion']))\n",
-    "        nueva_lista.append((un_alumno['nombre'], un_alumno['edad']))\n",
+    "        nueva_lista1.append((un_alumno['nombre'], un_alumno['direccion']))\n",
+    "        nueva_lista2.append((un_alumno['nombre'], un_alumno['edad']))\n",
     "\n",
-    "    return nueva_lista\n",
+    "    return nueva_lista1, nueva_lista2\n",
     "\n",
     "\n",
     "transformaEnTuplas(alumnos)"
