--- a/ejercicios5_local.ipynb
+++ b/ejercicios5_local.ipynb
@@ -9,18 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
     }
    ],
    "source": [
@@ -31,9 +29,16 @@
     "    return isPal\n",
     "\n",
     "\n",
-    "palabra = 'Hola'\n",
+    "def esPalindromo2(word):\n",
+    "    reversedW =''.join(reversed(list(word)))\n",
+    "    isPal = word == reversedW\n",
+    "    return isPal\n",
     "\n",
-    "esPalindromo(palabra)"
+    "\n",
+    "palabra = 'arañara'\n",
+    "\n",
+    "print(esPalindromo(palabra))\n",
+    "print(esPalindromo2(palabra))\n"
    ]
   },
   {
@@ -161,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +175,7 @@
        "[1, 8, 27, 64, 125, 216, 343, 512]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,11 +183,9 @@
    "source": [
     "# - Escribe una expresión lambda que eleve al cubo todos los números de la lista siguiente: [1,2,3,4,5,6,7,8], usando la función map\n",
     "\n",
-    "lista = [1,2,3,4,5,6,7,8]\n",
+    "lista = [1, 2, 3, 4, 5, 6, 7, 8]\n",
     "\n",
-    "miLambda = lambda x:x**3\n",
-    "\n",
-    "result = map(miLambda, lista)\n",
+    "result = map(lambda x: x**3, lista)\n",
     "\n",
     "list(result)"
    ]
