--- a/4.funciones_propias.ipynb
+++ b/4.funciones_propias.ipynb
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "3"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -366,10 +366,10 @@
      "output_type": "stream",
      "text": [
       "2\n",
-      "<function miFunc at 0x7fd221423490>\n",
+      "<function miFunc at 0x7f751cac4d30>\n",
       "4\n",
       "2\n",
-      "<function <lambda> at 0x7fd221392320>\n",
+      "<function <lambda> at 0x7f751d66ab00>\n",
       "6\n"
      ]
     }
