--- a/ejercicios/ejercicios4.ipynb
+++ b/ejercicios/ejercicios4.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -279,106 +279,10 @@
       "text/plain": [
        "{'Sosanna': [{'maths': [4, 3, 3.5]}, {'lang': [5, 5, 5.0]}],\n",
        " 'Rosalind': [{'maths': [8, 6, 7.0]}, {'lang': [10, 5, 7.5]}],\n",
-       " 'Gaspar': [{'maths': [1, 6, 3.5]}, {'lang': [7, 5, 6.0]}],\n",
-       " 'Herve': [{'maths': [2, 5, 3.5]}, {'lang': [8, 2, 5.0]}],\n",
-       " 'Jayme': [{'maths': [5, 1, 3.0]}, {'lang': [10, 7, 8.5]}],\n",
-       " 'Dasya': [{'maths': [5, 3, 4.0]}, {'lang': [8, 2, 5.0]}],\n",
-       " 'Christean': [{'maths': [2, 10, 6.0]}, {'lang': [3, 6, 4.5]}],\n",
-       " 'Risa': [{'maths': [9, 9, 9.0]}, {'lang': [2, 7, 4.5]}],\n",
-       " 'Florenza': [{'maths': [10, 5, 7.5]}, {'lang': [4, 4, 4.0]}],\n",
-       " 'Donella': [{'maths': [10, 3, 6.5]}, {'lang': [8, 3, 5.5]}],\n",
-       " 'Cesaro': [{'maths': [2, 4, 3.0]}, {'lang': [1, 7, 4.0]}],\n",
-       " 'Beatrisa': [{'maths': [9, 2, 5.5]}, {'lang': [1, 5, 3.0]}],\n",
-       " 'Thain': [{'maths': [1, 7, 4.0]}, {'lang': [6, 3, 4.5]}],\n",
-       " 'Shaylah': [{'maths': [6, 7, 6.5]}, {'lang': [2, 1, 1.5]}],\n",
-       " 'Anne-marie': [{'maths': [4, 6, 5.0]}, {'lang': [4, 3, 3.5]}],\n",
-       " 'Swen': [{'maths': [8, 5, 6.5]}, {'lang': [7, 6, 6.5]}],\n",
-       " 'Vaclav': [{'maths': [1, 4, 2.5]}, {'lang': [9, 10, 9.5]}],\n",
-       " 'Hermine': [{'maths': [2, 1, 1.5]}, {'lang': [8, 1, 4.5]}],\n",
-       " 'Sybyl': [{'maths': [10, 2, 6.0]}, {'lang': [3, 10, 6.5]}],\n",
-       " 'Ynes': [{'maths': [6, 10, 8.0]}, {'lang': [3, 2, 2.5]}],\n",
-       " 'Antonie': [{'maths': [9, 3, 6.0]}, {'lang': [4, 9, 6.5]}],\n",
-       " 'Trixie': [{'maths': [9, 10, 9.5]}, {'lang': [5, 4, 4.5]}],\n",
-       " 'Mathilde': [{'maths': [4, 5, 4.5]}, {'lang': [8, 1, 4.5]}],\n",
-       " 'Merlina': [{'maths': [6, 8, 7.0]}, {'lang': [4, 6, 5.0]}],\n",
-       " 'Zared': [{'maths': [1, 9, 5.0]}, {'lang': [5, 3, 4.0]}],\n",
-       " 'Brandais': [{'maths': [3, 3, 3.0]}, {'lang': [7, 1, 4.0]}],\n",
-       " 'Reggie': [{'maths': [10, 2, 6.0]}, {'lang': [10, 8, 9.0]}],\n",
-       " 'Burk': [{'maths': [8, 7, 7.5]}, {'lang': [5, 5, 5.0]}],\n",
-       " 'Seymour': [{'maths': [5, 8, 6.5]}, {'lang': [8, 3, 5.5]}],\n",
-       " 'Fergus': [{'maths': [2, 3, 2.5]}, {'lang': [5, 5, 5.0]}],\n",
-       " 'Jeanette': [{'maths': [1, 5, 3.0]}, {'lang': [5, 4, 4.5]}],\n",
-       " 'Arther': [{'maths': [5, 5, 5.0]}, {'lang': [9, 5, 7.0]}],\n",
-       " 'Avictor': [{'maths': [9, 2, 5.5]}, {'lang': [8, 5, 6.5]}],\n",
-       " 'Lynette': [{'maths': [7, 2, 4.5]}, {'lang': [10, 6, 8.0]}],\n",
-       " 'Briano': [{'maths': [2, 2, 2.0]}, {'lang': [4, 6, 5.0]}],\n",
-       " 'Daveta': [{'maths': [4, 7, 5.5]}, {'lang': [2, 9, 5.5]}],\n",
-       " 'Devonne': [{'maths': [10, 2, 6.0]}, {'lang': [6, 8, 7.0]}],\n",
-       " 'Chiarra': [{'maths': [6, 1, 3.5]}, {'lang': [4, 3, 3.5]}],\n",
-       " 'Torrey': [{'maths': [2, 9, 5.5]}, {'lang': [1, 3, 2.0]}],\n",
-       " 'Hattie': [{'maths': [2, 5, 3.5]}, {'lang': [7, 2, 4.5]}],\n",
-       " 'Veronica': [{'maths': [8, 6, 7.0]}, {'lang': [3, 4, 3.5]}],\n",
-       " 'Jared': [{'maths': [6, 1, 3.5]}, {'lang': [1, 3, 2.0]}],\n",
-       " 'Lori': [{'maths': [6, 1, 3.5]}, {'lang': [10, 10, 10.0]}],\n",
-       " 'Kristopher': [{'maths': [1, 2, 1.5]}, {'lang': [4, 9, 6.5]}],\n",
-       " 'Jeanne': [{'maths': [1, 1, 1.0]}, {'lang': [1, 4, 2.5]}],\n",
-       " 'Maximilian': [{'maths': [3, 3, 3.0]}, {'lang': [10, 9, 9.5]}],\n",
-       " 'Merrily': [{'maths': [5, 7, 6.0]}, {'lang': [1, 3, 2.0]}],\n",
-       " 'Skipton': [{'maths': [9, 6, 7.5]}, {'lang': [4, 9, 6.5]}],\n",
-       " 'Tom': [{'maths': [10, 5, 7.5]}, {'lang': [1, 7, 4.0]}],\n",
-       " 'Cirilo': [{'maths': [2, 2, 2.0]}, {'lang': [6, 6, 6.0]}],\n",
-       " 'Warde': [{'maths': [8, 7, 7.5]}, {'lang': [9, 5, 7.0]}],\n",
-       " 'Woodie': [{'maths': [10, 3, 6.5]}, {'lang': [2, 1, 1.5]}],\n",
-       " 'Odetta': [{'maths': [3, 7, 5.0]}, {'lang': [7, 9, 8.0]}],\n",
-       " 'Cordelie': [{'maths': [2, 3, 2.5]}, {'lang': [9, 1, 5.0]}],\n",
-       " 'Wilow': [{'maths': [10, 8, 9.0]}, {'lang': [2, 6, 4.0]}],\n",
-       " 'Charissa': [{'maths': [5, 3, 4.0]}, {'lang': [5, 10, 7.5]}],\n",
-       " 'Ralina': [{'maths': [10, 9, 9.5]}, {'lang': [8, 2, 5.0]}],\n",
-       " 'Charisse': [{'maths': [6, 5, 5.5]}, {'lang': [1, 9, 5.0]}],\n",
-       " 'Huntley': [{'maths': [8, 7, 7.5]}, {'lang': [10, 3, 6.5]}],\n",
-       " 'Ella': [{'maths': [4, 3, 3.5]}, {'lang': [6, 8, 7.0]}],\n",
-       " 'Nelli': [{'maths': [2, 6, 4.0]}, {'lang': [5, 10, 7.5]}],\n",
-       " 'Gearalt': [{'maths': [4, 9, 6.5]}, {'lang': [4, 4, 4.0]}],\n",
-       " 'Zahara': [{'maths': [2, 1, 1.5]}, {'lang': [1, 4, 2.5]}],\n",
-       " 'Dilan': [{'maths': [8, 6, 7.0]}, {'lang': [7, 6, 6.5]}],\n",
-       " 'Frederique': [{'maths': [5, 10, 7.5]}, {'lang': [2, 8, 5.0]}],\n",
-       " 'Saba': [{'maths': [9, 8, 8.5]}, {'lang': [9, 9, 9.0]}],\n",
-       " 'Natalya': [{'maths': [1, 5, 3.0]}, {'lang': [5, 2, 3.5]}],\n",
-       " 'Myrah': [{'maths': [3, 8, 5.5]}, {'lang': [3, 5, 4.0]}],\n",
-       " 'Magnum': [{'maths': [7, 1, 4.0]}, {'lang': [2, 9, 5.5]}],\n",
-       " 'Grace': [{'maths': [9, 4, 6.5]}, {'lang': [6, 6, 6.0]}],\n",
-       " 'Ilysa': [{'maths': [10, 9, 9.5]}, {'lang': [8, 8, 8.0]}],\n",
-       " 'Clerkclaude': [{'maths': [7, 2, 4.5]}, {'lang': [10, 2, 6.0]}],\n",
-       " 'Yetty': [{'maths': [8, 6, 7.0]}, {'lang': [2, 4, 3.0]}],\n",
-       " 'Cassandre': [{'maths': [6, 1, 3.5]}, {'lang': [9, 5, 7.0]}],\n",
-       " 'Olympie': [{'maths': [3, 3, 3.0]}, {'lang': [10, 3, 6.5]}],\n",
-       " 'Joshuah': [{'maths': [7, 7, 7.0]}, {'lang': [9, 2, 5.5]}],\n",
-       " 'Kristine': [{'maths': [3, 4, 3.5]}, {'lang': [7, 7, 7.0]}],\n",
-       " 'Dean': [{'maths': [8, 6, 7.0]}, {'lang': [10, 10, 10.0]}],\n",
-       " 'Ilyssa': [{'maths': [9, 7, 8.0]}, {'lang': [5, 3, 4.0]}],\n",
-       " 'Nannie': [{'maths': [6, 9, 7.5]}, {'lang': [2, 10, 6.0]}],\n",
-       " 'Feodor': [{'maths': [5, 6, 5.5]}, {'lang': [3, 7, 5.0]}],\n",
-       " 'Guglielma': [{'maths': [10, 3, 6.5]}, {'lang': [9, 6, 7.5]}],\n",
-       " 'Alla': [{'maths': [9, 10, 9.5]}, {'lang': [7, 7, 7.0]}],\n",
-       " 'Rowland': [{'maths': [4, 10, 7.0]}, {'lang': [8, 7, 7.5]}],\n",
-       " 'Miquela': [{'maths': [7, 5, 6.0]}, {'lang': [2, 7, 4.5]}],\n",
-       " 'Sapphira': [{'maths': [4, 6, 5.0]}, {'lang': [5, 2, 3.5]}],\n",
-       " 'Zorina': [{'maths': [3, 2, 2.5]}, {'lang': [4, 9, 6.5]}],\n",
-       " 'Rosemonde': [{'maths': [10, 6, 8.0]}, {'lang': [9, 9, 9.0]}],\n",
-       " 'Alisa': [{'maths': [1, 4, 2.5]}, {'lang': [9, 5, 7.0]}],\n",
-       " 'Ginger': [{'maths': [3, 4, 3.5]}, {'lang': [1, 2, 1.5]}],\n",
-       " 'Karlis': [{'maths': [9, 8, 8.5]}, {'lang': [3, 1, 2.0]}],\n",
-       " 'Robbin': [{'maths': [7, 5, 6.0]}, {'lang': [10, 8, 9.0]}],\n",
-       " 'Kimberly': [{'maths': [3, 7, 5.0]}, {'lang': [8, 1, 4.5]}],\n",
-       " 'Udale': [{'maths': [7, 1, 4.0]}, {'lang': [1, 7, 4.0]}],\n",
-       " 'Isidor': [{'maths': [8, 2, 5.0]}, {'lang': [6, 3, 4.5]}],\n",
-       " 'Farlee': [{'maths': [5, 10, 7.5]}, {'lang': [9, 9, 9.0]}],\n",
-       " 'Katleen': [{'maths': [8, 6, 7.0]}, {'lang': [9, 3, 6.0]}],\n",
-       " 'Nanine': [{'maths': [5, 7, 6.0]}, {'lang': [9, 9, 9.0]}],\n",
-       " 'Marlow': [{'maths': [2, 4, 3.0]}, {'lang': [5, 2, 3.5]}]}"
+       " 'Gaspar': [{'maths': [1, 6, 3.5]}, {'lang': [7, 5, 6.0]}]}"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,6 +320,66 @@
     "\n",
     "\n",
     "notas_con_media_x_asignatura"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Sosanna': [{'maths': [4, 3, 3.5]}, {'lang': [5, 5, 5.0]}],\n",
+       " 'Rosalind': [{'maths': [8, 6, 7.0]}, {'lang': [10, 5, 7.5]}],\n",
+       " 'Gaspar': [{'maths': [1, 6, 3.5]}, {'lang': [7, 5, 6.0]}]}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "samplenotas = dict(lnotas[:3])\n",
+    "\n",
+    "def completar_asignaturas_alumno(asignaturas):\n",
+    "    # Variable para la lista de notas de asignatauras\n",
+    "    nuevas_notas_todas_asignaturas = []\n",
+    "\n",
+    "    for asignatura in asignaturas:\n",
+    "        # Variable para cada asignatura para generar (max, min, media)\n",
+    "        new_asinatura = {}\n",
+    "        nombre_asig = list(asignatura.keys())[0]\n",
+    "        notas_asig = list(asignatura.values())[0]\n",
+    "\n",
+    "        media = round(sum(notas_asig)/2, 2)\n",
+    "\n",
+    "        new_notas_asig = list(notas_asig[:2])\n",
+    "        new_notas_asig.append( media)\n",
+    "\n",
+    "        # Generamos la entrada para una asignatura: nombre, lista de notas\n",
+    "        new_asinatura[nombre_asig] = new_notas_asig\n",
+    "\n",
+    "        # añadir asignatua a la lista\n",
+    "        nuevas_notas_todas_asignaturas.append(new_asinatura)\n",
+    "\n",
+    "    return nuevas_notas_todas_asignaturas\n",
+    "\n",
+    "\n",
+    "def completar_notas(notas_a_completar):\n",
+    "    # Creo nueva variable para las nuevas notas (trabajamos con inmutabilidad)\n",
+    "    notas_con_media_x_asignatura = {}\n",
+    "\n",
+    "    for alumno, asignaturas in notas_a_completar.items():\n",
+    "        nuevas_notas_todas_asignaturas = completar_asignaturas_alumno(asignaturas)\n",
+    "        notas_con_media_x_asignatura[alumno] = nuevas_notas_todas_asignaturas\n",
+    "\n",
+    "    return notas_con_media_x_asignatura\n",
+    "\n",
+    "\n",
+    "nuevas_notas = completar_notas(samplenotas)\n",
+    "nuevas_notas"
    ]
   }
  ],
