--- a/1. variables.ipynb
+++ b/1. variables.ipynb
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1009,7 @@
        "[('lunes', 1), ('martes', 2), ('miercoels', 3)]"
       ]
      },
-     "execution_count": 248,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1023,6 +1023,27 @@
     "items = list(dict1.items())\n",
     "items"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pi' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mpi\u001b[49m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pi' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "pi"
+   ]
   }
  ],
  "metadata": {
@@ -1030,6 +1051,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
