update sql python

--- a/sql/db_client.ipynb
+++ b/sql/db_client.ipynb
@@ -18,10 +18,10 @@
     "\n",
     "def create_server_connection():\n",
     "\n",
-    "    PGHOST = 'ep-super-meadow-a2w5lasv.eu-central-1.aws.neon.tech'\n",
-    "    PGDATABASE = 'datafundamentasl'\n",
-    "    PGUSER = 'datafundamentasl_owner'\n",
-    "    PGPASSWORD = 'yPDtEpT5R6mI'\n",
+    "    PGHOST = '...'\n",
+    "    PGDATABASE = '...'\n",
+    "    PGUSER = '...'\n",
+    "    PGPASSWORD = '...'\n",
     "\n",
     "    conn = None\n",
     "    try:\n",
