--- a/sql/db_client.ipynb
+++ b/sql/db_client.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,14 +21,14 @@
     "    PGHOST = '...'\n",
     "    PGDATABASE = '...'\n",
     "    PGUSER = '...'\n",
-    "    PGPASSWORD = '...'\n",
+    "    PGPASSWORD = '..'\n",
     "\n",
     "    conn = None\n",
     "    try:\n",
     "        conn = psycopg2.connect(database=PGDATABASE, user=PGUSER,\n",
     "                                password=PGPASSWORD, host=PGHOST, port=5432)\n",
     "        print(\"Database conn successful\")\n",
-    "    except Error as err:\n",
+    "    except Exception as err:\n",
     "        print(f\"Error: '{err}'\")\n",
     "\n",
     "    return conn\n",
@@ -57,7 +57,7 @@
     "                \"\"\")\n",
     "    # Make the changes to the database persistent\n",
     "    conn.commit()\n",
-    "except Error as err:\n",
+    "except Exception as err:\n",
     "        print(f\"Error: '{err}'\")\n",
     "        conn.rollback()\n",
     "\n",
@@ -89,9 +89,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Database conn successful\n",
+      "(1, 'Pedro', 'p@p.es', 34)\n",
+      "(2, 'Anna', 'a@a.es', 43)\n",
+      "(4, 'Juan', 'j@j.es', 23)\n"
+     ]
+    }
+   ],
    "source": [
     "# SELECT\n",
     "conn = create_server_connection()\n",
